Modified to ensure action bttons align to bottom of card

--- a/src/components/Client/Recipes/Recipes.css
+++ b/src/components/Client/Recipes/Recipes.css
@@ -52,9 +52,10 @@
     flex-direction: column;
     gap: 10px;
     background-color: white;
-    border: 2px solid (--var-borders);
+    border: 2px solid var(--col-borders);
     border-radius: 7px;
     overflow: hidden;
+    justify-content: space-between;
 }
 
 .recipeImage {
@@ -130,6 +131,12 @@
     justify-content: center;
     padding: 30px;
     font-size: 2rem;
+}
+
+.act-descon{
+    flex-direction: column;
+    align-items: space-around;
+    border: 1px solid red;
 }
 
 /* Desktop Styles */
